Add references for links

--- a/post/animal-ownership/index.gmi
+++ b/post/animal-ownership/index.gmi
@@ -289,6 +289,21 @@ If you have any thoughts on this article or would like to contribute your own fi
 ---
 27 February 2021.
 
+## References
+ 
+ => https://mypuppystory.com/genetic-diseases-of-purebred-dogs-why-mutts-may-be-healthier/ [3] here (https://mypuppystory.com/genetic-diseases-of-purebred-dogs-why-mutts-may-be-healthier/)
+ => https://www.awcwi.com/cat-breed-disorders/ [4] here (https://www.awcwi.com/cat-breed-disorders/)
+ => https://milddermatographia.com/the-hedonic-treadmill-is-wrong/ [5] Nihilistic Perfectly-Tuned Mass-Spring-Damper of Happiness (https://milddermatographia.com/the-hedonic-treadmill-is-wrong/)
+ => https://www.health.harvard.edu/blog/pets-can-help-their-humans-create-friendships-find-social-support-201505067981 [6] Harvard Health Publishing (https://www.health.harvard.edu/blog/pets-can-help-their-humans-create-friendships-find-social-support-201505067981)
+ => https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0122085 [7] PLoS One (https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0122085)
+ => https://journals.plos.org/plosmedicine/article?id=10.1371/journal.pmed.1000316 [8] PLoS One (https://journals.plos.org/plosmedicine/article?id=10.1371/journal.pmed.1000316)
+ => https://www.center4research.org/benefits-pets-human-health/ [9] National Center for Health Research (https://www.center4research.org/benefits-pets-human-health/)
+ => https://www.psychologytoday.com/us/blog/animals-and-us/201912/the-sad-truth-about-pet-ownership-and-depression [10] Hal Herzog (https://www.psychologytoday.com/us/blog/animals-and-us/201912/the-sad-truth-about-pet-ownership-and-depression)
+ => https://www.psychologytoday.com/us/blog/animals-and-us/201808/does-having-pets-really-make-us-healthier [11] article (https://www.psychologytoday.com/us/blog/animals-and-us/201808/does-having-pets-really-make-us-healthier)
+ => https://bmcgeriatr.biomedcentral.com/articles/10.1186/s12877-018-0867-3 [12] BMC Geriatrics (https://bmcgeriatr.biomedcentral.com/articles/10.1186/s12877-018-0867-3)
+ => https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0179494 [13] study (https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0179494)
+
+
 
 ## Related articles
 
