--- a/post/arch-linux/index.gmi
+++ b/post/arch-linux/index.gmi
@@ -12,6 +12,10 @@ I'm feeling less bad about going back to Ubuntu (again) now.
 ---
 20 February 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
