--- a/post/bechdel/index.gmi
+++ b/post/bechdel/index.gmi
@@ -114,6 +114,24 @@ If you can think of anything, shoot me an email at `milddermatographia@gmail.com
 ---
 27 June 2021.
 
+## References
+ 
+ => https://en.wikipedia.org/wiki/Bechdel_test [4] Bechdel test (https://en.wikipedia.org/wiki/Bechdel_test)
+ => https://imgur.com/a/612eD#0 [5] movies (https://imgur.com/a/612eD#0)
+ => https://bechdeltest.com/statistics/ [6] fail (https://bechdeltest.com/statistics/)
+ => https://www.instagram.com/SamDoesArts/ [7] samdoesarts (https://www.instagram.com/SamDoesArts/)
+ => https://www.instagram.com/peijinsart/ [8] peijinsart (https://www.instagram.com/peijinsart/)
+ => https://www.instagram.com/derekdomnicdsouza/ [9] derekdomnicdsouza (https://www.instagram.com/derekdomnicdsouza/)
+ => https://www.instagram.com/djamilaknopf/ [10] djamilaknopf (https://www.instagram.com/djamilaknopf/)
+ => https://www.instagram.com/sunfwer/ [11] sunfwer (https://www.instagram.com/sunfwer/)
+ => https://www.instagram.com/tattoos_of_insta/ [12] tattoos_of_insta (https://www.instagram.com/tattoos_of_insta/)
+ => https://www.reddit.com/r/tattoos/top/?t=all [13] /r/tattoos (https://www.reddit.com/r/tattoos/top/?t=all)
+ => https://www.insider.com/women-sexism-experiences-hollywood-misogyny-entertainment-industry#reese-witherspoons-financial-adviser-warned-her-that-shed-make-drastically-less-money-in-her-40s-1 [14] acting (https://www.insider.com/women-sexism-experiences-hollywood-misogyny-entertainment-industry#reese-witherspoons-financial-adviser-warned-her-that-shed-make-drastically-less-money-in-her-40s-1)
+ => https://everydayfeminism.com/2017/02/sexism-in-higher-ed-is-problem/ [15] academia (https://everydayfeminism.com/2017/02/sexism-in-higher-ed-is-problem/)
+ => https://theconversation.com/sexism-in-the-military-more-women-needed-in-senior-roles-to-force-cultural-change-151334 [16] the military (https://theconversation.com/sexism-in-the-military-more-women-needed-in-senior-roles-to-force-cultural-change-151334)
+ => https://www.entitymag.com/women-art/ [17] mens historic domination in art (https://www.entitymag.com/women-art/)
+
+
 
 ## Related articles
 
