--- a/post/bicycle/index.gmi
+++ b/post/bicycle/index.gmi
@@ -10,6 +10,11 @@ See this video [1] or any really to see how to fit your bike and seat post prope
 ---
 16 July 2021.
 
+## References
+ 
+ => https://www.youtube.com/watch?v=b_Zpj9m6lf8 [1] this video (https://www.youtube.com/watch?v=b_Zpj9m6lf8)
+
+
 
 ## Related articles
 
