--- a/post/broken-clock/index.gmi
+++ b/post/broken-clock/index.gmi
@@ -17,6 +17,10 @@ Join me next time when I "prove" that the egg does come before the chicken.
 ---
 17 November 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
