--- a/post/canada-engineering-wasteland/index.gmi
+++ b/post/canada-engineering-wasteland/index.gmi
@@ -178,6 +178,10 @@ Maybe I'll scrape LinkedIn's job postings, then create word clouds to find trend
 ---
 16 April 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
