--- a/post/checkout-lane/index.gmi
+++ b/post/checkout-lane/index.gmi
@@ -47,6 +47,10 @@ Either way, I'm excited to be back in a country that does grocery shopping prope
 ---
 16 July 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
