--- a/post/chicken-pot-pie/index.gmi
+++ b/post/chicken-pot-pie/index.gmi
@@ -118,6 +118,10 @@ He smiled as that violent wall of force and heat rose to meet him.
 ---
 27 February 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
