--- a/post/ddg-google/index.gmi
+++ b/post/ddg-google/index.gmi
@@ -21,6 +21,10 @@ Beyond the actual experience of using each search engine, Google is a pretty scu
 ---
 4 July 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
