--- a/post/empathy/index.gmi
+++ b/post/empathy/index.gmi
@@ -121,6 +121,17 @@ Consider how they might want to be treated, and how you'd want to be treated, in
 ---
 29 June 2021.
 
+## References
+ 
+ => https://joycearthur.com/abortion/the-only-moral-abortion-is-my-abortion/ [1] collection of anectotes (https://joycearthur.com/abortion/the-only-moral-abortion-is-my-abortion/)
+ => https://www.reddit.com/r/TwoXChromosomes/comments/nystsg/when_men_say_having_a_daughter_made_me_see_women/ [2] This (https://www.reddit.com/r/TwoXChromosomes/comments/nystsg/when_men_say_having_a_daughter_made_me_see_women/)
+ => https://www.newsobserver.com/news/politics-government/article252479573.html [3] Kathy Harrington (https://www.newsobserver.com/news/politics-government/article252479573.html)
+ => https://www.tor.com/2015/03/04/writing-women-characters-as-human-beings/ [4] long-form essay (https://www.tor.com/2015/03/04/writing-women-characters-as-human-beings/)
+ => https://www.reddit.com/r/Fantasy/comments/npa60a/kate_elliott_on_writing_female_characters_get_rid/ [5] other authors (https://www.reddit.com/r/Fantasy/comments/npa60a/kate_elliott_on_writing_female_characters_get_rid/)
+ => https://www.pinknews.co.uk/2020/10/02/egypt-police-lgbt-dating-apps-grindr-jailed-torture-sexual-abuse-human-rights/ [6] queer people who live in Egypt (https://www.pinknews.co.uk/2020/10/02/egypt-police-lgbt-dating-apps-grindr-jailed-torture-sexual-abuse-human-rights/)
+ => https://slate.com/technology/2021/07/catholic-priest-grindr-data-privacy.html [7] gay priests (https://slate.com/technology/2021/07/catholic-priest-grindr-data-privacy.html)
+
+
 
 ## Related articles
 
