--- a/post/escalators/index.gmi
+++ b/post/escalators/index.gmi
@@ -45,6 +45,13 @@ Please, Walk Down the Escalator [3]
 ---
 26 July 2021.
 
+## References
+ 
+ => https://slate.com/technology/2016/01/standing-on-escalators-faster-than-walking-according-to-transport-for-london-trial.html [1] Slate (https://slate.com/technology/2016/01/standing-on-escalators-faster-than-walking-according-to-transport-for-london-trial.html)
+ => http://gala.gre.ac.uk/8466/1/12_37.pdf [2] Research from the University of Greenwich in 2011 (http://gala.gre.ac.uk/8466/1/12_37.pdf)
+ => https://gawker.com/please-walk-down-the-escalator-507496613 [3] Please, Walk Down the Escalator (https://gawker.com/please-walk-down-the-escalator-507496613)
+
+
 
 ## Related articles
 
