--- a/post/gab/index.gmi
+++ b/post/gab/index.gmi
@@ -218,6 +218,25 @@ Comparing Gab more thoroughly to other social media platforms is a topic for ano
 ---
 24 April 2021.
 
+## References
+ 
+ => https://www.gatesnotes.com/Development/Omni-Processor-Update?WT.mc_id=08_12_2015_Omniprocessor_BG-TW_&WT.tsrc=BGTW [10] GatesNotes.com article (https://www.gatesnotes.com/Development/Omni-Processor-Update?WT.mc_id=08_12_2015_Omniprocessor_BG-TW_&WT.tsrc=BGTW)
+ => https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/cloth-face-cover-guidance.html [11] here (https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/cloth-face-cover-guidance.html)
+ => https://www.bbc.com/future/article/20200428-coronavirus-how-doctors-choose-who-lives-and-dies [12] who (https://www.bbc.com/future/article/20200428-coronavirus-how-doctors-choose-who-lives-and-dies)
+ => https://www.cbsnews.com/news/starr-county-only-hospital-forced-to-choose-who-is-sent-home-to-die-as-icu-beds-reach-capacity/ [13] lives (https://www.cbsnews.com/news/starr-county-only-hospital-forced-to-choose-who-is-sent-home-to-die-as-icu-beds-reach-capacity/)
+ => https://talkingpointsmemo.com/muckraker/who-lives-and-who-dies-bursting-covid-wards-force-docs-to-make-dire-decisions [14] and (https://talkingpointsmemo.com/muckraker/who-lives-and-who-dies-bursting-covid-wards-force-docs-to-make-dire-decisions)
+ => https://www.foxnews.com/health/ventilator-shortage-coronavirus-crisis-doctors-decide-who-lives-dies [15] who (https://www.foxnews.com/health/ventilator-shortage-coronavirus-crisis-doctors-decide-who-lives-dies)
+ => https://www.bloomberg.com/news/articles/2020-03-25/spanish-doctors-forced-to-choose-who-to-let-die-from-coronavirus [16] dies (https://www.bloomberg.com/news/articles/2020-03-25/spanish-doctors-forced-to-choose-who-to-let-die-from-coronavirus)
+ => https://equitablemath.org/ [17] equitablemath.org (https://equitablemath.org/)
+ => https://www.nytimes.com/interactive/2021/02/19/climate/texas-storm-power-generation-charts.html [18] inadequately winterized (https://www.nytimes.com/interactive/2021/02/19/climate/texas-storm-power-generation-charts.html)
+ => https://www.nytimes.com/2021/02/17/climate/texas-blackouts-disinformation.html [19] natural gas (https://www.nytimes.com/2021/02/17/climate/texas-blackouts-disinformation.html)
+ => https://en.wikipedia.org/wiki/2021_Texas_power_crisis#cite_note-16 [20] isolation of Texas' power grid (https://en.wikipedia.org/wiki/2021_Texas_power_crisis#cite_note-16)
+ => https://time.com/5905502/biden-covid-19-plan/ [21] 2020 elections (https://time.com/5905502/biden-covid-19-plan/)
+ => https://tradingeconomics.com/united-states/full-time-employment [22] tradingeconomics.com (https://tradingeconomics.com/united-states/full-time-employment)
+ => https://www.historyofvaccines.org/content/articles/do-vaccines-cause-autism [23] vaccines cause autism (https://www.historyofvaccines.org/content/articles/do-vaccines-cause-autism)
+ => https://www.snopes.com/fact-check/greene-jewish-lasers-wildfires/ [24] Jewish Space Laser (https://www.snopes.com/fact-check/greene-jewish-lasers-wildfires/)
+
+
 
 ## Related articles
 
