--- a/post/gris/index.gmi
+++ b/post/gris/index.gmi
@@ -294,6 +294,10 @@ If you have any thoughts, criticisms, etc., please send them to `milddermatograp
 ---
 4 July 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
