--- a/post/hedonic-treadmill/index.gmi
+++ b/post/hedonic-treadmill/index.gmi
@@ -91,6 +91,10 @@ The **Nihilistic Perfectly-Tuned Mass-Spring-Damper of Happiness** is the observ
 ---
 15 February 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
