--- a/post/hikes/index.gmi
+++ b/post/hikes/index.gmi
@@ -122,6 +122,11 @@ A welcomed change of pace after being stuck under those same clouds in Zurich fo
 ---
 21 November 2021.
 
+## References
+ 
+ => https://milddermatographia.com/the-mantario-trail/ [1] here (https://milddermatographia.com/the-mantario-trail/)
+
+
 
 ---
 
