--- a/post/link-rot/index.gmi
+++ b/post/link-rot/index.gmi
@@ -52,6 +52,10 @@ I'm not a front end person so I'm sure I messed something up, but it's irritatin
 ---
 15 March 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
