--- a/post/mantario/index.gmi
+++ b/post/mantario/index.gmi
@@ -53,6 +53,10 @@ I've forgotten a lot of them already, so I'll update this list as they come back
 ---
 22 June 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
