--- a/post/murphy/index.gmi
+++ b/post/murphy/index.gmi
@@ -33,6 +33,10 @@ Obviously, not every situation you find yourself in can be gamed to have a posit
 ---
 1 September 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
