--- a/post/music-listening-to-2/index.gmi
+++ b/post/music-listening-to-2/index.gmi
@@ -57,6 +57,10 @@ I've been revisiting Nero's original album; "Doomsday" and "My Eyes" still slap 
 ---
 26 July 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
