--- a/post/music-listening-to/index.gmi
+++ b/post/music-listening-to/index.gmi
@@ -23,6 +23,10 @@ Overall, I think I need to get outside the metal bubble and explore other genres
 ---
 20 March 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
