--- a/post/pet-abuse/index.gmi
+++ b/post/pet-abuse/index.gmi
@@ -11,6 +11,10 @@ Please please please take a moment to think about how your pet will react before
 ---
 27 June 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
