--- a/post/port-blocking/index.gmi
+++ b/post/port-blocking/index.gmi
@@ -12,6 +12,10 @@ I guess I'm just keeping my VPN subscription until the end of my degree.
 ---
 6 September 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
