--- a/post/prisoner-dilemma/index.gmi
+++ b/post/prisoner-dilemma/index.gmi
@@ -144,6 +144,15 @@ You can email me at: milddermatographia at gmail dot com.
 ---
 9 March 2021.
 
+## References
+ 
+ => https://www.youtube.com/results?search_query=justin+trudeau+avoiding+question [1] does it (https://www.youtube.com/results?search_query=justin+trudeau+avoiding+question)
+ => https://www.youtube.com/results?search_query=donald+trump+avoiding+question [2] does it (https://www.youtube.com/results?search_query=donald+trump+avoiding+question)
+ => https://www.youtube.com/results?search_query=people+avoiding+question [3] does it (https://www.youtube.com/results?search_query=people+avoiding+question)
+ => https://slatestarcodex.com/2014/12/17/the-toxoplasma-of-rage/ [4] The Toxoplasma of Rage (https://slatestarcodex.com/2014/12/17/the-toxoplasma-of-rage/)
+ => https://www.obsessivefacts.com/blog/2020-07-10-we-are-not-prisoners-of-groupthink.html [5] We are not prisoners of group-think (https://www.obsessivefacts.com/blog/2020-07-10-we-are-not-prisoners-of-groupthink.html)
+
+
 
 ## Related articles
 
