--- a/post/saved-posts/index.gmi
+++ b/post/saved-posts/index.gmi
@@ -134,6 +134,101 @@ Dothraki, Michael Scott, Philosophy, Satire, SpongeBob, and all kinds of other s
 ---
 7 July 2021.
 
+## References
+ 
+ => https://milddermatographia.com/link-rot/ [1] a while ago (https://milddermatographia.com/link-rot/)
+ => https://castel.dev/post/lecture-notes-1/ [2] How I'm able to take notes in mathematics lectures using LaTeX and Vim (https://castel.dev/post/lecture-notes-1/)
+ => https://blog.eldruin.com/tips-hobby-embedded-development-beginners/ [3] Tips for hobby embedded development beginners - Eldruin's Blog (https://blog.eldruin.com/tips-hobby-embedded-development-beginners/)
+ => https://matteding.github.io/2019/04/25/sparse-matrices/ [4] Sparse Matrices - Matt Eding (https://matteding.github.io/2019/04/25/sparse-matrices/)
+ => https://bastian.rieck.me/blog/posts/2017/adding_copyright_notices/ [5] Adding copyright notices to papers - Bastian Rieck (https://bastian.rieck.me/blog/posts/2017/adding_copyright_notices/)
+ => https://bartwronski.com/2021/01/18/is-this-a-branch/ [6] Is this a branch - Bart Wronski (https://bartwronski.com/2021/01/18/is-this-a-branch/)
+ => https://nee.lv/2021/02/28/How-I-cut-GTA-Online-loading-times-by-70/ [7] How I cut GTA Online loading times by 70% - T0ST (https://nee.lv/2021/02/28/How-I-cut-GTA-Online-loading-times-by-70/)
+ => https://www.mattkeeter.com/blog/2021-03-01-happen/ [8] It Can Happen to You (https://www.mattkeeter.com/blog/2021-03-01-happen/)
+ => https://danluu.com/input-lag/ [9] Computer Latency - Dan Luu (https://danluu.com/input-lag/)
+ => https://lwn.net/Articles/844224/ [10] An introduction to lockless algorithms - Paolo Bonzini (https://lwn.net/Articles/844224/)
+ => https://gregoryszorc.com/blog/2021/04/06/surprisingly-slow/ [11] Surprisingly Slow - Gregory Szorc (https://gregoryszorc.com/blog/2021/04/06/surprisingly-slow/)
+ => https://www.youtube.com/watch?app=desktop&t=853&v=DJFKl_5JTnA&feature=youtu.be [12] Donald B. Gillies Lecture: Dr. Michael Stonebraker (https://www.youtube.com/watch?app=desktop&t=853&v=DJFKl_5JTnA&feature=youtu.be)
+ => https://mattferraro.dev/posts/poissons-equation [13] Poisson's Equation is the Most Powerful Tool not yet in your Toolbox - matt Ferraro (https://mattferraro.dev/posts/poissons-equation)
+ => https://scottlocklin.wordpress.com/2020/07/29/open-problems-in-robotics/ [14] Open problems in Robotics - Scott Locklin (https://scottlocklin.wordpress.com/2020/07/29/open-problems-in-robotics/)
+ => https://shuby.de/blog/scitech/grand-challenges-of-robotics/ [15] Grand Challenges of Robotics - Shuby (https://shuby.de/blog/scitech/grand-challenges-of-robotics/)
+ => https://allshire.org/getting-started-robotics/ [16] Getting started in Robotics - Allshire (https://allshire.org/getting-started-robotics/)
+ => https://www.cs.utexas.edu/users/EWD/transcriptions/EWD06xx/EWD611.html [17] On the fact that the Atlantic Ocean has two sides - E.W. Dijkstra (https://www.cs.utexas.edu/users/EWD/transcriptions/EWD06xx/EWD611.html)
+ => http://jacek.zlydach.pl/blog/2019-07-31-ads-as-cancer.html [18] Advertising is a cancer on society - Jacek Złydach (http://jacek.zlydach.pl/blog/2019-07-31-ads-as-cancer.html)
+ => https://jacobbuckman.com/2021-05-29-please-commit-more-blatant-academic-fraud/ [19] Please Commit More Blatant Academic Fraud - Jacob Buckman (https://jacobbuckman.com/2021-05-29-please-commit-more-blatant-academic-fraud/)
+ => https://www.youtube.com/watch?app=desktop&v=L-x8DYTOv7w [20] Youtubers have to declare ads. Why doesn't anyone else? - Tom Scott (https://www.youtube.com/watch?app=desktop&v=L-x8DYTOv7w)
+ => https://pulkitsharma07.github.io/2020/10/02/hacktoberfest-india/ [21] Why most Hacktoberfest PRs are from India - Pulkit Sharma (https://pulkitsharma07.github.io/2020/10/02/hacktoberfest-india/)
+ => https://www.kilobitspersecond.com/2020/09/22/people-expect-technology-to-suck/ [22] People expect technology to suck - kilobitspersecond (https://www.kilobitspersecond.com/2020/09/22/people-expect-technology-to-suck/)
+ => https://solar.lowtechmagazine.com/2020/12/how-and-why-i-stopped-buying-new-laptops.html [23] How and why I stopped buying new laptops - Low Tech Magazine (https://solar.lowtechmagazine.com/2020/12/how-and-why-i-stopped-buying-new-laptops.html)
+ => https://www.laquadrature.net/2020/11/01/faut-il-reguler-internet-1/ [24] Faut-il réguler Internet? - La Quadrature du Net (https://www.laquadrature.net/2020/11/01/faut-il-reguler-internet-1/)
+ => https://www.laquadrature.net/2021/02/14/faut-il-reguler-internet-2-2/ [25] Part 2 (https://www.laquadrature.net/2021/02/14/faut-il-reguler-internet-2-2/)
+ => https://www.disgustinglyoptimistic.com/post/don-t-let-social-media-think-for-you [26] Don't Let Social Media Think For You - DisgustinglyOptimistic (https://www.disgustinglyoptimistic.com/post/don-t-let-social-media-think-for-you)
+ => https://paygo.ghost.io/why-did-i-leave-google-or-why-did-i-stay-so-long/ [27] Why did I leave Google or why did I stay so long - Noam Bardin (https://paygo.ghost.io/why-did-i-leave-google-or-why-did-i-stay-so-long/)
+ => https://gizmodo.com/i-cut-the-big-five-tech-giants-from-my-life-it-was-hel-1831304194 [28] I Cut the 'Big Five' Tech Giants From My Life. It Was Hell - Kashmir Hill (https://gizmodo.com/i-cut-the-big-five-tech-giants-from-my-life-it-was-hel-1831304194)
+ => https://seirdy.one/2021/01/27/whatsapp-and-the-domestication-of-users.html [29] WhatsApp and the domestication of users - Rohan Kumar (https://seirdy.one/2021/01/27/whatsapp-and-the-domestication-of-users.html)
+ => https://mooseyanon.medium.com/github-f-ck-your-name-change-de599033bbbe0 [30] GitHub, f*ck your name change. - MooseyAnon (https://mooseyanon.medium.com/github-f-ck-your-name-change-de599033bbbe0)
+ => https://berthub.eu/articles/posts/5g-elephant-in-the-room/ [31] 5G: The outsourced elephant in the room - berthub (https://berthub.eu/articles/posts/5g-elephant-in-the-room/)
+ => https://slatestarcodex.com/2014/07/30/meditations-on-moloch/ [32] Meditations on Moloch - Slate Star Codex (https://slatestarcodex.com/2014/07/30/meditations-on-moloch/)
+ => https://slatestarcodex.com/2014/12/17/the-toxoplasma-of-rage/ [33] The Toxoplasma of Rage - Slate Star Codex (https://slatestarcodex.com/2014/12/17/the-toxoplasma-of-rage/)
+ => https://joycearthur.com/abortion/the-only-moral-abortion-is-my-abortion/ [34] “The Only Moral Abortion is My Abortion” - Joyce Arthur (https://joycearthur.com/abortion/the-only-moral-abortion-is-my-abortion/)
+ => https://milddermatographia.com/empathy/ [35] Empathy (https://milddermatographia.com/empathy/)
+ => https://www.theparisreview.org/blog/2021/05/17/americas-dead-souls/ [36] America’s Dead Souls - Molly McGhee (https://www.theparisreview.org/blog/2021/05/17/americas-dead-souls/)
+ => https://unherd.com/2020/01/cast-out-how-knitting-fell-into-a-purity-spiral/ [37] How knitters got knotted in a purity spiral - UnHerd (https://unherd.com/2020/01/cast-out-how-knitting-fell-into-a-purity-spiral/)
+ => https://harpers.org/archive/1932/10/in-praise-of-idleness/ [38] In Praise of Idleness - Bertrand Russell (https://harpers.org/archive/1932/10/in-praise-of-idleness/)
+ => https://slatestarcodex.com/2019/10/30/new-atheism-the-godlessness-that-failed/ [39] New Atheism: The Godlessness That Failed - Slate Star Codex (https://slatestarcodex.com/2019/10/30/new-atheism-the-godlessness-that-failed/)
+ => https://tildes.net/~life/tcr/hating_men_is_a_freeing_form_of_hostility [40] Hating men is a freeing form of hostility - Grzmot (https://tildes.net/~life/tcr/hating_men_is_a_freeing_form_of_hostility)
+ => https://www.obsessivefacts.com/blog/2020-07-10-we-are-not-prisoners-of-groupthink.html [41] We are not prisoners of groupthink (https://www.obsessivefacts.com/blog/2020-07-10-we-are-not-prisoners-of-groupthink.html)
+ => https://oxide.computer/blog/compensation-as-a-reflection-of-values [42] Compensation as a Reflection of Values - Bryan Cantrill (https://oxide.computer/blog/compensation-as-a-reflection-of-values)
+ => https://fs.blog/2021/05/slack/ [43] Efficiency is the Enemy - fs (https://fs.blog/2021/05/slack/)
+ => https://keenen.xyz/just-be-rich/ [44] Just be Rich - Keenen Charles (https://keenen.xyz/just-be-rich/)
+ => https://financialpost.com/news/economy/virtual-brain-drain-pandemic-immigration [45] New threats to an old problem: The pandemic has made 'brain drain' even worse - Bianca Bharti (https://financialpost.com/news/economy/virtual-brain-drain-pandemic-immigration)
+ => https://www.robrhinehart.com/the-new-york-times/ [46] The New York Times - Robert Rhinehart (https://www.robrhinehart.com/the-new-york-times/)
+ => https://taibbi.substack.com/p/in-defense-of-substack [47] In Defense of Substack - Matt Taibbi (https://taibbi.substack.com/p/in-defense-of-substack)
+ => https://acoup.blog/2020/12/04/collections-that-dothraki-horde-part-i-barbarian-couture/ [48] Collections: That Dothraki Horde, Part I: Barbarian Couture - A Collection of Unmitigated Pedantry (https://acoup.blog/2020/12/04/collections-that-dothraki-horde-part-i-barbarian-couture/)
+ => https://www.ribbonfarm.com/2009/10/07/the-gervais-principle-or-the-office-according-to-the-office/ [49] The Gervais Principle, Or The Office According to “The Office” - Ribbonfarm (https://www.ribbonfarm.com/2009/10/07/the-gervais-principle-or-the-office-according-to-the-office/)
+ => https://lettersofnote.com/2012/08/06/why-explore-space/ [50] Why Explore Space? (https://lettersofnote.com/2012/08/06/why-explore-space/)
+ => https://uncannymagazine.com/article/the-protagonist-problem/ [51] The Protagonist Problem - Ada Palmer and Jo Walton (https://uncannymagazine.com/article/the-protagonist-problem/)
+ => https://www.tor.com/2015/03/04/writing-women-characters-as-human-beings/ [52] Writing Women Characters as Human Beings - Kate Elliot (https://www.tor.com/2015/03/04/writing-women-characters-as-human-beings/)
+ => https://1d4chan.org/wiki/Old_Man_Henderson [53] Old Man Henderson (https://1d4chan.org/wiki/Old_Man_Henderson)
+ => https://wh0rd.ca/humor/text/Adequacy_org%20%20Is%20Your%20Son%20a%20Computer%20Hacker.htm [54] Is Your Son a Computer hacker? - T Reginald Gibbons (https://wh0rd.ca/humor/text/Adequacy_org%20%20Is%20Your%20Son%20a%20Computer%20Hacker.htm)
+ => https://blog.lostartpress.com/2021/02/21/adamson-low-treasure-out-of-the-bog/ [55] Adamson & Low: Treasure Out of the Bog - nrhiller (https://blog.lostartpress.com/2021/02/21/adamson-low-treasure-out-of-the-bog/)
+ => https://nautil.us/issue/43/heroes/what-does-any-of-this-have-to-do-with-physics [56] What Does Any of This Have To Do with Physics? - Bob Henderson (https://nautil.us/issue/43/heroes/what-does-any-of-this-have-to-do-with-physics)
+ => https://danco.substack.com/p/the-michael-scott-theory-of-social [57] The Michael Scott Theory of Social Class - Alex Danco (https://danco.substack.com/p/the-michael-scott-theory-of-social)
+ => http://www.robinhobb.com/blog/posts/38429 [58] The Animal is tired - Robin Hobb (http://www.robinhobb.com/blog/posts/38429)
+ => https://whyevolutionistrue.com/2021/01/15/another-scam-paper-published-in-a-scientific-journal/ [59] Another scam paper published in a “scientific” journal - Why Evolution is True (https://whyevolutionistrue.com/2021/01/15/another-scam-paper-published-in-a-scientific-journal/)
+ => https://every.to/cybernaut/linkedins-alternate-universe-21780381-7883 [60] LinkedIn's Alternative Universe - Fadeke Adegbuyi (https://every.to/cybernaut/linkedins-alternate-universe-21780381-7883)
+ => https://thorstenball.com/blog/2020/09/08/how-can-you-not-be-romantic-about-programming/ [61] How can you not be romantic about programming? - Thorsten Ball (https://thorstenball.com/blog/2020/09/08/how-can-you-not-be-romantic-about-programming/)
+ => https://danluu.com/hn-comments/ [62] HN: the good parts - Dan Luu (https://danluu.com/hn-comments/)
+ => https://femfosec.com/fertility/ [63] Fertility - Femfo (https://femfosec.com/fertility/)
+ => http://aphilosopher.drmcl.com/2021/03/12/the-problem-of-other-minds-the-aesthetic-solution/ [64] The Problem of Other Minds: The Aesthetic Solution - Michael LaBossiere (http://aphilosopher.drmcl.com/2021/03/12/the-problem-of-other-minds-the-aesthetic-solution/)
+ => https://thoughtcatalog.com/andrew-syrios/2015/07/the-continuing-decline-of-popular-music/ [65] The Continuing Decline of Popular Music - Andrew Syrios (https://thoughtcatalog.com/andrew-syrios/2015/07/the-continuing-decline-of-popular-music/)
+ => https://www.jitbit.com/alexblog/249-now-thats-what-i-call-a-hacker/ [66] Now that's what I call a Hacker - Alex Yumashev (https://www.jitbit.com/alexblog/249-now-thats-what-i-call-a-hacker/)
+ => https://www.uncleguidosfacts.com/2013/11/why-would-anyone-choose-to-live-in-cold.html?m=1 [67] Why Would Anyone Choose to Live in A Cold Climate - Uncle Guido (https://www.uncleguidosfacts.com/2013/11/why-would-anyone-choose-to-live-in-cold.html?m=1)
+ => https://futureofcoding.org/episodes/044 [68] Making Your Own Tools - Future of Coding (https://futureofcoding.org/episodes/044)
+ => https://rationalwiki.org/wiki/Principle_of_explosion [69] Principle of explosion (https://rationalwiki.org/wiki/Principle_of_explosion)
+ => https://queue.acm.org/detail.cfm?id=3469844 [70] A New Era for Mechanical CAD - Jessie Frazelle (https://queue.acm.org/detail.cfm?id=3469844)
+ => https://drewdevault.com/2021/06/07/The-Netherlands.html [71] I will be moving to the Netherlands - Drew DeVault (https://drewdevault.com/2021/06/07/The-Netherlands.html)
+ => https://stillinthesimulation.com/untitled-comic/the-bikini-bottom-horror-chapter-1-rise-of-the-star/ [72] Rise of the Star (https://stillinthesimulation.com/untitled-comic/the-bikini-bottom-horror-chapter-1-rise-of-the-star/)
+ => https://cheapskatesguide.org/articles/personal-computer-stories.html [73] What Real People Say about Their Computers - Cheapskate's Guide (https://cheapskatesguide.org/articles/personal-computer-stories.html)
+ => https://debugger.medium.com/instagram-has-become-skymall-68b9f2fbbc30 [74] Instagram Has Becomme SkyMall - Clive Thompson (https://debugger.medium.com/instagram-has-become-skymall-68b9f2fbbc30)
+ => http://rachelbythebay.com/w/2021/01/17/woe/ [75] HR is not your friend, and other things I think you should know (http://rachelbythebay.com/w/2021/01/17/woe/)
+ => https://www.collaborativefund.com/blog/a-few-rules/ [76] A Few Rules - Morgan Housel (https://www.collaborativefund.com/blog/a-few-rules/)
+ => https://www.lesswrong.com/posts/7hFeMWC6Y5eaSixbD/100-tips-for-a-better-life [77] 100 Tips for a Better Life - Ideopunk (https://www.lesswrong.com/posts/7hFeMWC6Y5eaSixbD/100-tips-for-a-better-life)
+ => https://blog.samaltman.com/the-days-are-long-but-the-decades-are-short [78] The days are long but the decades are short - Sam Altman (https://blog.samaltman.com/the-days-are-long-but-the-decades-are-short)
+ => https://critter.blog/2020/08/06/productivity-porn/ [79] Productivity Porn - Mike Crittenden (https://critter.blog/2020/08/06/productivity-porn/)
+ => https://acesounderglass.com/2020/06/09/where-to-start-research/ [80] Where to Start Research - Aceso Under Glass (https://acesounderglass.com/2020/06/09/where-to-start-research/)
+ => https://medium.com/swlh/dopamine-fasting-2-0-the-hot-silicon-valley-trend-7c4dc3ba2213 [81] The Definitive Guide to Dopamine Fasting 2.0: The Hot Silicon Valley Trend - Cameron Sepah (https://medium.com/swlh/dopamine-fasting-2-0-the-hot-silicon-valley-trend-7c4dc3ba2213)
+ => https://cheapskatesguide.org/articles/personal-website-hunting.html [82] Hunting the Nearly-Invisible Personal Website - Cheapskatesguide (https://cheapskatesguide.org/articles/personal-website-hunting.html)
+ => https://docs.sweeting.me/s/favorite-blogs# [83] Favorite Sites & Blogs - Sweetings (https://docs.sweeting.me/s/favorite-blogs#)
+ => https://news.ycombinator.com/item?id=27302195 [84] Ask HN: Favorite Blogs by Individuals? (https://news.ycombinator.com/item?id=27302195)
+ => https://benhoyt.com/writings/the-small-web-is-beautiful/ [85] The small web is beautiful - Ben Hoyt (https://benhoyt.com/writings/the-small-web-is-beautiful/)
+ => https://sadgrl.online/newoldweb/manifesto.html [86] The internet has changed - sadgrl (https://sadgrl.online/newoldweb/manifesto.html)
+ => https://sadgrl.dreamwidth.org/1051.html [87] There's no place like the old internet - sadgrl (https://sadgrl.dreamwidth.org/1051.html)
+ => https://archive.md/ah1F4#selection-1451.0-1451.38 [88] The Dark Forest Theory of the Internet - Yancey Strickler (https://archive.md/ah1F4#selection-1451.0-1451.38)
+ => https://thenewleafjournal.com/around-the-web-rss-as-a-facebook-alternative/ [89] Around the Web, RSS as a Facebook Alternative - Nicholas A. Ferrel (https://thenewleafjournal.com/around-the-web-rss-as-a-facebook-alternative/)
+ => https://idlewords.com/talks/website_obesity.htm [90] The Website Obesity Crisis - Idle Words (https://idlewords.com/talks/website_obesity.htm)
+ => https://pxlnv.com/blog/bullshit-web/ [91] The Bullshit Web - Nick Heer (https://pxlnv.com/blog/bullshit-web/)
+
+
 
 ## Related articles
 
