--- a/post/scholarships/index.gmi
+++ b/post/scholarships/index.gmi
@@ -30,6 +30,10 @@ Oh, and they're not just for first year of the degree, but for each year.
 ---
 13 February 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
