--- a/post/termux/index.gmi
+++ b/post/termux/index.gmi
@@ -13,6 +13,10 @@ I don't doubt that Termux might fall short for actual-software-engineering-level
 ---
 1 September 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
