--- a/post/university-retrospective/index.gmi
+++ b/post/university-retrospective/index.gmi
@@ -216,6 +216,10 @@ Either way, it was kind of cathartic putting it all down.
 ---
 23 January 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
