--- a/post/washroom-stalls/index.gmi
+++ b/post/washroom-stalls/index.gmi
@@ -17,6 +17,10 @@ It's a wonderful experience, doing what you are there to do without constantly w
 ---
 8 August 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
