--- a/post/wide-shoes/index.gmi
+++ b/post/wide-shoes/index.gmi
@@ -41,6 +41,10 @@ I hate wasting so much time waiting for another pair of shoes to come in, only f
 ---
 30 July 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
