--- a/post/bears/index.gmi
+++ b/post/bears/index.gmi
@@ -13,6 +13,12 @@ Bears! (1.6MB) [2]
 ---
 17 August 2021.
 
+## References
+ 
+ => https://github.com/rpgtex/DND-5e-LaTeX-Template [1] here (https://github.com/rpgtex/DND-5e-LaTeX-Template)
+ => /pdf/Bears!.pdf [2] Bears! (1.6MB) (/pdf/Bears!.pdf)
+
+
 
 ## Related articles
 
