--- a/post/geas/index.gmi
+++ b/post/geas/index.gmi
@@ -14,6 +14,10 @@ Nearby, there is a Hunter who has broken their contract and is about to be elimi
 ---
 16 May 2021.
 
+## References
+ 
+
+
 
 ## Related articles
 
