Actually publish gemini

--- a/post/arch-linux/index.gmi
+++ b/post/arch-linux/index.gmi
@@ -19,9 +19,9 @@ I'm feeling less bad about going back to Ubuntu (again) now.
 
 ## Related articles
 
+=> /post/gemini/index.gmi New Theme and Gemini!: <no value>
 => /post/termux/index.gmi Termux and Android: <no value>
 => /post/tfa-2/index.gmi Two-Factor Authentication and Digital Hygiene: <no value>
-=> /post/ddg-google/index.gmi Duck Duck Go > Google: <no value>
 ---
 
 => / Back to the Index
