--- a/post/gemini/index.gmi
+++ b/post/gemini/index.gmi
@@ -36,6 +36,11 @@ It's not the most efficient thing in the world, but I'm just happy to have it wo
 
 
 
+## Related articles
+
+=> /post/termux/index.gmi Termux and Android: <no value>
+=> /post/tfa-2/index.gmi Two-Factor Authentication and Digital Hygiene: <no value>
+=> /post/ddg-google/index.gmi Duck Duck Go > Google: <no value>
 ---
 
 => / Back to the Index
