--- a/post/tfa-2/index.gmi
+++ b/post/tfa-2/index.gmi
@@ -66,9 +66,9 @@ That said, I need to take the time to weigh their strengths and weaknesses prope
 
 ## Related articles
 
+=> /post/gemini/index.gmi New Theme and Gemini!: <no value>
 => /post/still-alive/index.gmi I'm Still Alive!: <no value>
 => /post/port-blocking/index.gmi My Student Housing is Blocking Ports: <no value>
-=> /post/termux/index.gmi Termux and Android: <no value>
 ---
 
 => / Back to the Index
