Rename gemini post to avoid .gitignore

--- a/post/ddg-google/index.gmi
+++ b/post/ddg-google/index.gmi
@@ -28,7 +28,7 @@ Beyond the actual experience of using each search engine, Google is a pretty scu
 
 ## Related articles
 
-=> /post/gemini/index.gmi New Theme and Gemini!: <no value>
+=> /post/gemini-theme/index.gmi New Theme and Gemini!: <no value>
 => /post/termux/index.gmi Termux and Android: <no value>
 => /post/tfa-2/index.gmi Two-Factor Authentication and Digital Hygiene: <no value>
 ---
