--- a/post/arch-linux/index.gmi
+++ b/post/arch-linux/index.gmi
@@ -19,7 +19,7 @@ I'm feeling less bad about going back to Ubuntu (again) now.
 
 ## Related articles
 
-=> /post/gemini/index.gmi New Theme and Gemini!: <no value>
+=> /post/gemini-theme/index.gmi New Theme and Gemini!: <no value>
 => /post/termux/index.gmi Termux and Android: <no value>
 => /post/tfa-2/index.gmi Two-Factor Authentication and Digital Hygiene: <no value>
 ---
