--- a/post/onenote/index.gmi
+++ b/post/onenote/index.gmi
@@ -47,7 +47,7 @@ Woopsie.
 
 ## Related articles
 
-=> /post/gemini/index.gmi New Theme and Gemini!: <no value>
+=> /post/gemini-theme/index.gmi New Theme and Gemini!: <no value>
 => /post/termux/index.gmi Termux and Android: <no value>
 => /post/tfa-2/index.gmi Two-Factor Authentication and Digital Hygiene: <no value>
 ---
