--- a/post/military-kid/index.gmi
+++ b/post/military-kid/index.gmi
@@ -137,9 +137,9 @@ Sorry dad.
 
 ## Related articles
 
+=> /post/food-switzerland/index.gmi Food Prices in Switzerland: <no value>
 => /post/still-alive/index.gmi I'm Still Alive!: <no value>
 => /post/port-blocking/index.gmi My Student Housing is Blocking Ports: <no value>
-=> /post/alien/index.gmi I dream of Aliens: <no value>
 ---
 
 => / Back to the Index
