--- a/post/alien/index.gmi
+++ b/post/alien/index.gmi
@@ -25,9 +25,9 @@ I haven't the faintest idea.
 
 ## Related articles
 
+=> /post/food-switzerland/index.gmi Food Prices in Switzerland: <no value>
 => /post/still-alive/index.gmi I'm Still Alive!: <no value>
 => /post/port-blocking/index.gmi My Student Housing is Blocking Ports: <no value>
-=> /post/wide-shoes-2/index.gmi Wide Shoes: The Resolvening: <no value>
 ---
 
 => / Back to the Index
