--- a/post/music-listening-to-2/index.gmi
+++ b/post/music-listening-to-2/index.gmi
@@ -64,9 +64,9 @@ I've been revisiting Nero's original album; "Doomsday" and "My Eyes" still slap 
 
 ## Related articles
 
+=> /post/food-switzerland/index.gmi Food Prices in Switzerland: <no value>
 => /post/still-alive/index.gmi I'm Still Alive!: <no value>
 => /post/port-blocking/index.gmi My Student Housing is Blocking Ports: <no value>
-=> /post/alien/index.gmi I dream of Aliens: <no value>
 ---
 
 => / Back to the Index
